--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
     "@angular/compiler": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
+    "@angular/localize": "^10.0.14",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@dinero.js/currencies": "^2.0.0-alpha.8",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "accounting-js": "^1.1.1",
     "bootstrap": "^4.5.0",
+    "dinero.js": "^2.0.0-alpha.8",
     "jquery": "^3.5.1",
+    "ng2-currency-mask": "11.0.0",
     "popper.js": "^1.14.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
@@ -30,9 +36,10 @@
     "@angular-devkit/build-angular": "~0.1000.0",
     "@angular/cli": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^7.0.7",
     "codelyzer": "^6.0.0-next.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
